2008-05-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MergedLayerDecorator.h
    * src/lib/HttpFetchFile.cpp
    * src/lib/MergedLayerDecorator.cpp
    * src/lib/TextureTile.cpp
    * src/lib/TextureTile.h
    * src/lib/TinyWebBrowser.cpp
    * src/lib/TileLoader.cpp
    * src/lib/HttpFetchFile.h
    * src/lib/HttpDownloadManager.cpp
    * src/lib/MarbleModel.cpp
    * src/lib/HttpDownloadManager.h

    Fix HttpDownloadManager for OpenStreetMap theme.

2008-05-19  Torsten Rahn  <rahn@kde.org> 

    

2008-05-20  Patrick Spendrin <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataPlacemark.{h,cpp}:
    
    add setter Method for GeoDataPoint - this is needed by KML parsing.
    
2008-05-20  Claudiu Covaci  <claudiu.covaci@gmail.com>

    * src/lib/MarbleModel.{h,cpp}:
    * src/lib/SunLocator.{h,cpp}:
    - removed instance of ExtDateTime from SunLocator 
    - ExtDateTime is now instantiased in MarbleModel which
    should provide a Marble-wide access to the extended date 
    and time class.

2008-05-19  Torsten Rahn  <rahn@kde.org> 

    Fixing the regression that made tile updates fail.

    * src/lib/MergedLayerDecorator.cpp:
    * src/lib/TileLoader.cpp:
    * src/lib/HttpDownloadManager.cpp:
    * src/lib/MarbleModel.cpp:

    - Fixing missing rawloadTile execution after
      image download. 
    - Minor cleaning ...

2008-05-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TileLoaderHelper.cpp

    Fix function downloadUrl: Do not ignore the value of the
    path attribute.

2008-05-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/scene/GeoSceneTexture.cpp

    Set m_downloadUrl to "http://download.kde.org/apps/marble/"
    as default, so we do not need to edit all .dgml files.

2008-05-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TileLoaderHelper.h
    * src/lib/TileLoaderHelper.cpp

    Part 14 of groundwork for OpenStreetMap texture tiles.